@@ -1,0 +1,69 @@
+"","time","status","x"
+"1",51,0,-17.1150275883203
+"2",9,0,-17.5727167888237
+"3",5,0,-20.3680695682712
+"4",40,0,-13.8277633903417
+"5",26,1,-10.3071714528552
+"6",2,1,-2.29098597635619
+"7",36,0,-18.0635496955628
+"8",32,1,-11.5066093935073
+"9",67,1,-16.8131582571628
+"10",24,1,-9.69893970674575
+"11",13,1,-7.85478607881933
+"12",11,1,-6.48109924737989
+"13",68,0,-19.4943832712794
+"14",29,0,-25.1118642299086
+"15",7,1,-4.92851733278624
+"16",21,0,-16.7718323829178
+"17",17,1,-8.32983411309471
+"18",61,0,-17.1131129910259
+"19",30,0,-17.4059793141124
+"20",15,0,-20.1330769852555
+"21",50,0,-17.6000742053979
+"22",8,1,-5.70726585270456
+"23",53,0,-15.2304721444227
+"24",12,1,-7.36572719536148
+"25",47,1,-13.4128798535897
+"26",49,0,-22.7650629103851
+"27",66,0,-17.4533371510837
+"28",42,1,-11.9757637972355
+"29",19,0,-18.2696697930424
+"30",44,0,-13.5716745119751
+"31",27,1,-10.6886857316707
+"32",62,0,-17.024480994705
+"33",55,0,-16.1023303504768
+"34",4,1,-4.29458290295345
+"35",63,0,-22.0079388132151
+"36",64,0,-23.064962288108
+"37",22,1,-8.99807505054832
+"38",1,1,-0.669257735294935
+"39",60,0,-16.3522189393695
+"40",31,1,-10.9267296510864
+"41",65,0,-17.5139972785389
+"42",34,0,-13.0942857606704
+"43",37,0,-16.6679153992536
+"44",38,0,-14.1909320530104
+"45",59,0,-15.6736586106759
+"46",33,0,-14.8102979322674
+"47",39,0,-14.9115455841611
+"48",10,1,-6.18164464790082
+"49",43,0,-16.875488760267
+"50",14,0,-16.9621311745993
+"51",58,0,-15.824007542594
+"52",52,0,-15.7606128200538
+"53",3,1,-3.33213090346449
+"54",16,1,-8.03705118196838
+"55",54,0,-20.8433381994686
+"56",41,0,-22.8856176837536
+"57",23,0,-13.0049821411851
+"58",48,0,-17.550663153928
+"59",45,0,-24.4516261058601
+"60",18,0,-21.7068519199585
+"61",28,0,-23.8117651878197
+"62",35,0,-22.3798563251011
+"63",46,1,-12.7274983894499
+"64",25,0,-11.6623182628255
+"65",6,0,-21.5263341809516
+"66",57,1,-14.4128661251178
+"67",56,0,-18.350459282579
+"68",20,0,-15.3129453438143
